@@ -1,5 +1,10 @@
 2003-08-15  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (ecm_get_color_for_component): use tigert's
+	new color palette.
+
+2003-08-15  Rodrigo Moya <rodrigo@ximian.com>
+
 	* gui/e-cal-model.c (e_cal_model_finalize): don't unref the
 	'accounts' field, since it is internal to itip-utils.c.
 
